@@ -8,3 +8,4 @@ markers =
     regression: mark test as part of a regression suite
     soak: long-running soak tests (disabled by default)
     nightly: slow-path stability-window tests
+    docker: requires access to a local Docker daemon
